添加测试用例

--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "gulp-util": "^3.0.8",
     "images": "^3.0.0",
     "through2": "^2.0.3"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1"
   }
 }
