--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gulp-css-img-sprite",
   "version": "1.0.0",
-  "description": "输入css文件，自动生成精灵图和新的css文件",
+  "description": "input css file and get new css file & sprite image",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -22,8 +22,8 @@
   },
   "homepage": "https://github.com/king-king/gulp-css-img-sprite#readme",
   "dependencies": {
+    "css-img-sprite": "^1.0.11",
     "gulp-util": "^3.0.8",
-    "images": "^3.0.0",
     "through2": "^2.0.3"
   },
   "devDependencies": {
